:tada: Fixed z-index problem

--- a/src/Components/Header/Header.scss
+++ b/src/Components/Header/Header.scss
@@ -58,6 +58,8 @@
         font-family: "Open Sans", sans-serif;
         font-weight: 600;
         color: rgba(#343434, 0.5);
+        z-index: 1000;
+        
       }
 
       img[title="Search"] {
@@ -228,6 +230,7 @@
       top: 405px;
       left: 50%;
       transform: translateX(-50%);
+      z-index: 999;
 
       &.active {
         opacity: 1;
